--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -583,7 +583,7 @@ button {
 }
 
 .builder-card3 {
-  width: 120px;
+  width: 12px;
   margin: 10px 0px;
   border-radius: 7px;
   overflow: hidden;
@@ -592,7 +592,7 @@ button {
 }
 
 .builder-card3:hover {
-  transform: scale(2.92);
+  transform: scale(3.04);
   z-index: 2000;
   width: 140px;
   margin: 2.25px 0px;
@@ -1075,7 +1075,7 @@ button {
   height: 65px;
   position: fixed;
   right: 2rem;
-  bottom: 37.5rem;
+  bottom: 77.5%;
   cursor: pointer;
   opacity: 30%;
   transition: opacity 0.5s;
