--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -1053,6 +1053,14 @@ button {
   margin-top: 20px;
 }
 
+.margin-top-40 {
+  margin-top: 40px;
+}
+
+.margin-bottom-20 {
+  margin-bottom: 20px;
+}
+
 .db-pool-count {
   margin: 1% 0%;
   font-weight: 700;
@@ -1094,4 +1102,11 @@ button {
   text-align: center;
   align-items: center;
   padding: 0;
+}
+
+.create-section {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
