--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -650,6 +650,7 @@ button {
   overflow: hidden;
   margin: 0px 10px 10px 10px;
   border: 1px solid white;
+  transition: transform 0.3s ease-in-out;
 }
 
 .cd-related-card:hover {
