--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -1121,3 +1121,26 @@ button {
   flex-direction: column;
   align-items: center;
 }
+
+.loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30vh;
+}
+
+.loading-spinner {
+  margin-top: 5%;
+  border: 4px solid rgba(0, 0, 0, 0.3);
+  border-top: 4px solid #ffffff;
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  animation: spin 2s linear infinite;
+}
+
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
