--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -1150,3 +1150,10 @@ button {
 .pointer {
   cursor: pointer;
 }
+
+.card-row {
+  width: 230px;
+  border-radius: 10px;
+  overflow: hidden;
+  border: 1px solid white;
+}
