Lost volume due to stall data; adding back nav changes

--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -1303,3 +1303,14 @@ button:hover {
 .black {
   color: black;
 }
+
+.blackSpace {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.507);
+  width: 100vw;
+  height: 100vh;
+  z-index: 900;
+}
