--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -928,6 +928,7 @@ button:hover {
   background-color: rgba(163, 26, 26, 0.315);
   border: 2px solid rgb(173, 41, 41);
   border-radius: 5px;
+  outline: 1px solid white;
 }
 
 .pluckdeck3 {
@@ -935,6 +936,7 @@ button:hover {
   background-color: rgba(26, 63, 163, 0.315);
   border: 2px solid rgb(41, 50, 173);
   border-radius: 5px;
+  outline: 1px solid white;
 }
 
 .card-container {
