Password view toggle, changed loading for decks and adding loading for pulls, getAccountData function added

--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -1355,3 +1355,9 @@ button:hover {
     initial-value: 0deg;
     inherits: false;
   }
+
+  .error {
+    color: red;
+    margin-top: 15px;
+    text-align: center;
+  }
