--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -133,6 +133,11 @@ body.dark::after {
   }
 }
 
+:root {
+  --window-height: calc(100vh - 100px);
+}
+
+
 h1 {
   font-weight: bold;
   text-align: center;
@@ -1433,4 +1438,13 @@ button:hover {
     grid-auto-flow: dense;
     margin-right: 15px;
     margin-bottom: 18px;
+  }
+
+  .app-container {
+    position: relative;
+  }
+
+  .content {
+    min-height: var(--window-height);
+    /* padding-bottom: 100px; */
   }
