--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -827,6 +827,14 @@ button:hover {
   z-index: 0;
 }
 
+.logo5 {
+  margin: 2px 4px 4px 5px;
+  width: 50px;
+  height: 50px;
+  z-index: 0;
+  float: right;
+}
+
 
 .footer {
   display: flex;
