--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -391,19 +391,14 @@ button:hover {
   outline: 1px solid white;
 }
 
-/* .maindeck2 {
-  margin: 2% 0%;
-  background-color: rgba(30, 1, 100, 0.315);
-  border: 2px solid rgb(0, 0, 0);
-  border-radius: 5px;
-}
+.maindeck2{
 
-.pluckdeck2 {
   margin: 2% 0%;
-  background-color: rgba(30, 2, 100, 0.315);
-  border: 2px solid rgb(0, 0, 0);
+  background-color: rgba(173, 73, 73, 0.315);
+  border: 2px solid rgb(173, 41, 41);
   border-radius: 5px;
-} */
+  outline: 1px solid white;
+}
 
 .back-to-top {
   height: 65px;
@@ -851,7 +846,7 @@ button:hover {
 }
 
 .no-cards {
-  margin-bottom: 20px;
+  margin: 0px 0px 20px 20px;
 }
 
 .imgwindow {
@@ -1452,7 +1447,7 @@ button:hover {
 
   .card-pool-fill {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(145px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
     gap: 10px;
     grid-auto-flow: dense;
   }
@@ -1462,8 +1457,8 @@ button:hover {
     grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
     gap: 10px;
     grid-auto-flow: dense;
-    margin-right: 15px;
-    margin-bottom: 18px;
+    /* margin-right: 18px; */
+    margin: 0px 18px 18px 18px;
   }
 
   .app-container {
