--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -407,6 +407,7 @@ button:hover {
   bottom: 2rem;
   cursor: pointer;
   opacity: 100%;
+  z-index: 900;
   transition: opacity 0.5s;
 }
 
@@ -1108,7 +1109,7 @@ button:hover {
   left: 0;
   right: 0; */
   margin-top: -20%;
-  height: 50%; /* Adjust this value to show the desired portion of the image */
+  height: 50%;
   background-color: black; /* Adjust the background color if needed */
 }
 
@@ -1428,10 +1429,6 @@ button:hover {
   .account-option-items {
     margin-top: 20px;
     width: 47.5vw;
-    display: grid;
-    /* width: ; */
-    grid-template-columns: repeat(1, 1fr);
-    gap: 1rem; /* Add any gap you want between the cards */
   }
 
   .username {
