--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -1484,3 +1484,27 @@ button:hover {
   .selected2 {
     outline: 5px solid rgb(255, 255, 255);
   }
+
+  .glow {
+    filter: brightness(1);
+  }
+
+  .glow:hover {
+    filter: brightness(2);
+  }
+
+  .glow2 {
+    filter: brightness(1);
+  }
+
+  .glow2:hover {
+    filter: brightness(1.5);
+  }
+
+  .glow3 {
+    filter: brightness(1);
+  }
+
+  .glow3:hover {
+    filter: brightness(1.2);
+  }
