--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -766,7 +766,7 @@ button:hover {
 
 .card-list-card {
   width: 100%;
-  margin: 20px 3px 0px 0px;
+  margin: 20px 0px 0px 0px;
   border-radius: 4.5%;
   overflow: hidden;
   border: 1px solid white;
@@ -785,6 +785,14 @@ button:hover {
   /* margin: 20px 3px 0px 3px; */
   border-radius: 7px;
   overflow: hidden;
+}
+
+.card-list-card4 {
+  width: 100%;
+  margin: 10px 0px 0px 0px;
+  border-radius: 4.5%;
+  overflow: hidden;
+  border: 1px solid white;
 }
 
 .img-modal {
@@ -1618,6 +1626,20 @@ button:hover {
     margin-top: 0;
   }
 
+  .media-margin-top-10 {
+    margin-top: 10px;
+  }
+
+  .media-margin-bottom-none {
+    margin-bottom: 0;
+  }
+
+  .media-card-image-wrapper {
+    position: relative;
+    overflow: hidden;
+    height: 220px; /* Adjust this value as needed to control the card height */
+  }
+
   .media-card-image-wrapper2 {
     position: relative;
     overflow: hidden;
@@ -1759,25 +1781,41 @@ button:hover {
   .Staunch {
     width: 100%;
     margin: 0 0 0 0;
-    background-size: 100%;
+    background: none;
+    background-color: rgb(42, 168, 115);
+    border: 7px solid rgb(3, 131, 78);
+    border-radius: 7px;
+    outline: 1px solid white;
   }
 
   .Power {
     width: 100%;
     margin: 0 0 0 0;
-    background-size: 100%;
+    background: none;
+    background-color: rgb(124, 19, 33);
+    border: 7px solid rgb(255, 0, 43);
+    border-radius: 7px;
+    outline: 1px solid white;
   }
 
   .Unity {
     width: 100%;
     margin: 0 0 0 0;
-    background-size: 100%;
+    background: none;
+    background-color: rgb(82, 96, 194);
+    border: 7px solid rgb(28, 40, 78);
+    border-radius: 7px;
+    outline: 1px solid white;
   }
 
   .Canny {
     width: 100%;
     margin: 0 0 0 0;
-    background-size: 100%;
+    background: none;
+    background-color: rgb(101, 56, 131);
+    border: 7px solid rgb(60, 26, 68);
+    border-radius: 7px;
+    outline: 1px solid white;
   }
 
   .NoClass {
@@ -1789,25 +1827,41 @@ button:hover {
   .bigStaunch {
     width: 100%;
     margin: 0 0 0 0;
-    background-size: 200%;
+    background: none;
+    background-color: rgb(42, 168, 115);
+    border: 7px solid rgb(3, 131, 78);
+    border-radius: 7px;
+    outline: 1px solid white;
   }
 
   .bigPower {
     width: 100%;
     margin: 0 0 0 0;
-    background-size: 200%;
+    background: none;
+    background-color: rgb(124, 19, 33);
+    border: 7px solid rgb(255, 0, 43);
+    border-radius: 7px;
+    outline: 1px solid white;
   }
 
   .bigUnity {
     width: 100%;
     margin: 0 0 0 0;
-    background-size: 200%;
+    background: none;
+    background-color: rgb(82, 96, 194);
+    border: 7px solid rgb(28, 40, 78);
+    border-radius: 7px;
+    outline: 1px solid white;
   }
 
   .bigCanny {
     width: 100%;
     margin: 0 0 0 0;
-    background-size: 200%;
+    background: none;
+    background-color: rgb(101, 56, 131);
+    border: 7px solid rgb(60, 26, 68);
+    border-radius: 7px;
+    outline: 1px solid white;
   }
 
   .bigNoClass {
