--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -358,6 +358,13 @@ button:hover {
   outline: 1px solid rgba(255, 255, 255, 0.3);
 }
 
+.outScrollable {
+  position: relative; /* Make the container a positioning context */
+  width: 100%; /* Ensure the image container takes the full width of the scrollable div */
+  height: 100%; /* Ensure the image container takes the full height of the scrollable div */
+  /* display: flex; */
+}
+
 .cardpool {
   margin: 2% 0%;
   background-color: rgba(80, 42, 170, 0.315);
@@ -695,6 +702,13 @@ button:hover {
   overflow: hidden;
 }
 
+.cd-related-modal-card {
+  width: 140px;
+  border-radius: 4%;
+  overflow: hidden;
+  margin: 0px 10px 10px 10px;
+  border: 1px solid white;
+}
 
 .cd-info {
   display: grid;
@@ -1367,10 +1381,15 @@ button:hover {
   transform: translate(-50%, -50%);
   background-color: rgb(255, 255, 255);
   padding: 20px;
-  border: 1px solid #ccc;
+  border-radius: 5px;
+  outline: 3px solid #ffffff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  max-width: 80%;
+  max-width: 75%;
+
   z-index: 1000;
+  overflow-x: visible;
+  overflow-y: auto;
+  max-height: 80vh;
 }
 
 .large-modal.dark {
