--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -1601,8 +1601,10 @@ button:hover {
   }
 
   .deck-import-scrollable {
-    margin: 0% 0% 0% .5%;
-    width: 800px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    width: 99%;
     min-height: 20px;
     border: 1px solid rgba(0, 0, 0, 0.212);
     background-color: rgba(15, 0, 50, 0.315);
