--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -884,6 +884,10 @@ button:hover {
   margin: 0px 0px 20px 20px;
 }
 
+.no-cards2 {
+  margin: 0px 0px 10px 20px;
+}
+
 .imgwindow {
   height: 300px;
   width: 300px;
@@ -1602,6 +1606,7 @@ button:hover {
 
   .deck-import-scrollable {
     margin: auto;
+    margin-bottom: 10px;
     display: flex;
     flex-wrap: wrap;
     width: 99%;
