--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -1675,13 +1675,15 @@ button:hover {
     justify-content: center;
     width: 200px;
     margin: 0;
-    border: 1px solid rgba(0, 0, 0, 0.212);
+    border: 1px solid;
+    border-color: var(--color-body);
   }
 
   .table200p {
     width: var(--window-width200);
     margin: 0;
-    border: 1px solid rgba(0, 0, 0, 0.212);
+    border: 1px solid;
+    border-color: var(--color-body)
   }
 
   .support {
@@ -1700,6 +1702,16 @@ button:hover {
     outline: 1px solid white;
   }
 
+  .large-article {
+    height: 150px;
+    width: 100%;
+  }
+
+  .cat-label {
+    text-align: left;
+    margin: 6px 5px 5px 5px;
+    font-weight: 700;
+  }
 
 @media screen and (max-width: 1333px) {
   .cards-page-card-list {
