--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -1677,13 +1677,15 @@ button:hover {
     margin: 0;
     border: 1px solid;
     border-color: var(--color-body);
+    padding: 0px;
   }
 
   .table200p {
     width: var(--window-width200);
     margin: 0;
     border: 1px solid;
-    border-color: var(--color-body)
+    border-color: var(--color-body);
+    padding: 0px;
   }
 
   .support {
@@ -1711,6 +1713,10 @@ button:hover {
     text-align: left;
     margin: 6px 5px 5px 5px;
     font-weight: 700;
+  }
+
+  .no-pad {
+    padding: 0px;
   }
 
 @media screen and (max-width: 1333px) {
