--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -22,7 +22,7 @@ body {
 body::after {
   content: "";
   position: fixed;
-  top: 62px;
+  top: 66px;
   left: 0;
   width: 100%;
   height: 100vh;
@@ -255,8 +255,9 @@ button:hover {
 .navbar-brand2 {
   font-size: 25px;
   font-weight: 600;
-  margin: 0 10px;
-  padding: 0;
+  /* margin: 0 10px; */
+  margin: auto;
+  padding: 0 0 0 10px;
   text-decoration: none;
   color: white;
 }
@@ -280,6 +281,12 @@ button:hover {
   text-decoration: none;
   color: white;
   display: block;
+  margin: 0 0 0 10px;
+}
+
+.nav-dropdown-item:hover {
+  text-decoration: none;
+  color: white;
 }
 
 .semi-bold-20 {
@@ -856,14 +863,6 @@ button:hover {
   width: 338px;
   border-radius: 17px;
   overflow: hidden;
-}
-
-.hidden2 {
-  /* opacity: 0;
-  max-height: 0;
-  overflow: hidden;
-  transition: all 0.5s; */
-  display: none;
 }
 
 .logo {
@@ -1759,8 +1758,9 @@ button:hover {
 
   .navbar {
     top: 0;
-    height: 62px;
+    height: 66px;
     width: 100%;
+    padding: 0;
     background-color: rgb(44, 41, 56);
     border-bottom: 1px white solid;
     /* border-bottom: none */
@@ -1777,6 +1777,8 @@ button:hover {
 
   .threebars {
     height: 40px;
+    margin-right: 15px;
+    cursor: pointer;
   }
 
   .nav-main {
@@ -1811,19 +1813,67 @@ button:hover {
     margin: auto;
     padding: 0 10px 0 10px;
     font-weight: 400;
+    color: white;
   }
 
   .nav-dropdown-content {
-    /* height: fit-content; */
-    /* width: fit-content; */
     background-color: rgb(80, 74, 102);
     position: absolute;
     min-width: 160px;
     z-index: 9999;
-    top: 62px;
+    top: 66px;
   }
 
-@media screen and (max-width: 30px) {
+  .navbar-select {
+    height: 62px;
+    width: auto;
+    display: flex;
+    align-items: center;
+    transition: all 1s;
+  }
+
+  .navbar-select:hover {
+    background-color: rgb(123, 114, 158);
+  }
+
+  .navbar-selected {
+    height: 62px;
+    width: auto;
+    display: flex;
+    align-items: center;
+    background-color: rgb(255, 0, 0);
+  }
+
+  .navbar-selected:hover {
+    background-color: rgb(255, 0, 0);
+  }
+
+  .dropdown-select {
+    display: flex;
+    align-items: center;
+    height: 50px;
+    transition: all 1s;
+  }
+
+  .dropdown-select:hover {
+    background-color: red;
+    transition: all 1s;
+  }
+
+  .accountbuttons {
+    display: flex;
+    margin-right: 10px;
+  }
+
+  .hidden2 {
+    /* opacity: 0;
+    max-height: 0;
+    overflow: hidden;
+    transition: all 0.5s; */
+    display: none;
+  }
+
+@media screen and (max-width: 1330px) {
   .cards-page-card-list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -1986,10 +2036,6 @@ button:hover {
     text-align: center;
   }
 
-  .none {
-    display: none;
-  }
-
   .between-space {
     display: inline;
   }
@@ -2016,7 +2062,6 @@ button:hover {
     max-width: 98%;
     margin: auto;
   }
-
 
   .media-display {
     display: block;
@@ -2162,6 +2207,82 @@ button:hover {
     transform: none; /* Reset the transform property */
   }
 
+  .nav-main {
+    height: 66px;
+    align-items: center;
+  }
+
+  .navbar-menu {
+    display: block;
+    top: 66px;
+    padding: 0;
+  }
+
+  .nav-item {
+    font-size: 20px;
+    font-weight: 400;
+    padding: auto;
+    float: none;
+    overflow: hidden;
+    background-color: rgba(73, 68, 92, 0.945);
+    width: 100vw;
+    outline: .5px solid white;
+  }
+
+  .nav-item2 {
+    display: flex;
+  }
+
+  .navbar-menu-item {
+    margin: 20px;
+    padding: 0;
+  }
+
+  .nav-dropdown-content {
+    background-color: rgba(80, 74, 102, 0.623);
+    position: relative;
+    width: 100%;
+    z-index: 1;
+    top: auto;
+  }
+
+  .dropdown-select {
+    display: flex;
+    justify-content: left;
+  }
+
+  .nav-dropdown-item {
+    margin-left: 20px;
+    transition: all .5s;
+  }
+
+  .nav-dropdown-item:hover {
+    margin-left: 35px;
+    transition: all .5s;
+  }
+
+  .navbar-select {
+    justify-content: left;
+  }
+
+  .navbar-select2 {
+    display: flex;
+    justify-content: center;
+    background-color: rgb(123, 114, 158);
+    width: 50vw;
+    outline: 1px solid white;
+    transition: all 1s;
+  }
+
+  .navbar-select2:hover {
+    background-color: red;
+    transition: all 1s;
+  }
+
+  .dropdown-select:hover {
+    background-color: rgba(255, 0, 0, 0);
+  }
+
   body {
     background-size: 100%, 60%;
   }
@@ -2174,8 +2295,28 @@ button:hover {
     width: 100%;
   }
 
+  .minimize {
+    top: 66px;
+    max-height: 0;
+    max-width: 0;
+    opacity: 0;
+    transition: all .5s;
+  }
+
+  .maximize {
+    top: 66px;
+    max-height: 1333px;
+    max-width: 1333px;
+    opacity: 1;
+    transition: all .5s;
+  }
+
   .wide100 {
     width: 100%;
+  }
+
+  .none {
+    display: none;
   }
 }
 
@@ -2190,7 +2331,7 @@ button:hover {
       color: white;
       content: "";
       position: absolute;
-      top: 0;
+      top: 66px;
       left: 0;
       height: 100%;
       width: 100%;
@@ -2205,7 +2346,7 @@ button:hover {
   body.dark::after {
     content: "";
     position: fixed;
-    top: 0;
+    top: 66px;
     left: 0;
     width: 100%;
     height: 100vh;
