--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -7,8 +7,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   content: "";
   position: absolute;
-  top: 62px;
+  top: 0;
   left: 0;
+  padding-top: 62px;
   height: 100%;
   width: 100%;
   background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url("./backg.png");
@@ -22,7 +23,7 @@ body {
 body::after {
   content: "";
   position: fixed;
-  top: 66px;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
@@ -75,8 +76,9 @@ body.dark {
   color: white;
   content: "";
   position: absolute;
-  top: 62px;
+  top: 0;
   left: 0;
+  padding: auto;
   height: 100%;
   width: 100%;
   background-image: linear-gradient(to right, rgba(16, 14, 22, 0.5), rgba(17, 0, 54, 0.4)), url("./backg.png");
@@ -166,7 +168,7 @@ code {
 }
 
 Card {
-  padding:0px;
+  padding: 0px;
   height: auto;
   align-items: center;
 }
@@ -245,6 +247,7 @@ button:hover {
 .white-space {
   max-width: 80%;
   margin: auto;
+  top:
 }
 
 .navbar-brand {
@@ -253,13 +256,14 @@ button:hover {
 }
 
 .navbar-brand2 {
-  font-size: 25px;
+  font-size: 23px;
   font-weight: 600;
   /* margin: 0 10px; */
-  margin: auto;
-  padding: 0 0 0 10px;
+  margin: 0 0 0 10px;
+  padding: 0 20px 0 10px;
   text-decoration: none;
   color: white;
+  transition: all 0.5s;
 }
 
 .navbar-brand2:hover {
@@ -281,7 +285,7 @@ button:hover {
   text-decoration: none;
   color: white;
   display: block;
-  margin: 0 0 0 10px;
+  margin: 0 10px 0 10px;
 }
 
 .nav-dropdown-item:hover {
@@ -675,6 +679,20 @@ button:hover {
   outline: 7px solid rgb(255, 0, 0);
   border: none;
 }
+
+@keyframes pulse2 {
+  0% {
+    outline: 7px solid rgb(255, 255, 255);
+  }
+  50% {
+    outline: 7px solid rgba(255, 255, 255, 0.308);
+  }
+  100% {
+    outline: 7px solid rgb(255, 255, 255);
+  }
+}
+
+
 
 .add-comp-button {
   margin: 15px 10px 10px 5px;
@@ -1575,7 +1593,7 @@ button:hover {
     /* margin-right: 18px; */
     margin: 0px 18px 18px 18px;
     opacity: 1;
-    max-height: 2000px;
+    /* max-height: 2000px; */
     transition: all 0.5s;
   }
 
@@ -1634,8 +1652,20 @@ button:hover {
   }
 
   .glow3:hover {
-    filter: brightness(1.2);
+    filter: brightness(1.3);
   }
+
+  /* @keyframes pulse-glow3 {
+    0% {
+      filter: brightness(1.3);
+    }
+    50% {
+      filter: brightness(1);
+    }
+    100% {
+      filter: brightness(1.3);
+    }
+  } */
 
   .top-row {
     min-width: 200px;
@@ -1846,12 +1876,20 @@ button:hover {
     width: auto;
     display: flex;
     align-items: center;
-    background-color: rgb(255, 0, 0);
+    animation: pulse 1.5s infinite;
   }
 
-  .navbar-selected:hover {
-    background-color: rgb(255, 0, 0);
+@keyframes pulse {
+  0% {
+    background-color: rgb(123, 114, 158);
   }
+  50% {
+    background-color: rgb(44, 41, 56);
+  }
+  100% {
+    background-color: rgb(123, 114, 158)
+  }
+}
 
   .dropdown-select {
     display: flex;
@@ -1861,7 +1899,7 @@ button:hover {
   }
 
   .dropdown-select:hover {
-    background-color: red;
+    background-color: rgb(180, 166, 233);
     transition: all 1s;
   }
 
@@ -2336,7 +2374,7 @@ button:hover {
       color: white;
       content: "";
       position: absolute;
-      top: 66px;
+      top: 0;
       left: 0;
       height: 100%;
       width: 100%;
@@ -2351,7 +2389,7 @@ button:hover {
   body.dark::after {
     content: "";
     position: fixed;
-    top: 66px;
+    top: 0;
     left: 0;
     width: 100%;
     height: 100vh;
