--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -245,6 +245,11 @@ button:hover {
   margin: 15px 5px 15px 17px;
 }
 
+.left-top-card2 {
+  text-align: left;
+  margin: 15px 5px 15px 0px;
+}
+
 .white-space {
   max-width: 80%;
   margin: auto;
