--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -2181,6 +2181,7 @@ button:hover {
   position: fixed;
   left: 0;
   transition: all 0.5s;
+  z-index: 10;
 }
 
 .infoPanelClosed {
@@ -2191,6 +2192,7 @@ button:hover {
   position: fixed;
   left: 0;
   transition: all 0.5s;
+  z-index: 10;
 }
 
 .panel-card {
