--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -408,6 +408,12 @@ button:hover {
   /* display: flex; */
 }
 
+.outScrollableSim {
+  position: relative; /* Make the container a positioning context */
+  height: 100%; /* Ensure the image container takes the full height of the scrollable div */
+  /* display: flex; */
+}
+
 .inScrollable {
   position: relative; /* Make the container a positioning context */
   width: 100%; /* Ensure the image container takes the full width of the scrollable div */
@@ -1510,7 +1516,6 @@ button:hover {
   outline: 3px solid #ffffff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   max-width: 75%;
-
   z-index: 1000;
   overflow-x: visible;
   overflow-y: auto;
@@ -2010,6 +2015,7 @@ button:hover {
 .play-area {
   height: 70vh;
   margin-top: 0px;
+  margin-right: -225px;
 }
 
 .matCard {
@@ -2162,6 +2168,16 @@ button:hover {
   z-index: 20;
 }
 
+.builder-card-hand2 {
+  width: 115px;
+  margin: 10px;
+  border-radius: 5px;
+  overflow: hidden;
+  border: 1px solid white;
+  z-index: 0;
+}
+
+
 .selected3 {
   outline: 5px solid rgb(255, 0, 0);
   border: none;
@@ -2245,6 +2261,40 @@ button:hover {
   left: 360px;
   top:222px;
   transition: all 0.5s;
+}
+
+.field_box_modal {
+  transform: perspective(1000px) rotateX(360deg) scale(1, 1) translate(0px 0px);
+  align-self: center;
+  position: absolute;
+}
+
+.sim-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(255, 255, 255);
+  padding: 20px;
+  border-radius: 5px;
+  outline: 3px solid #ffffff;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  max-width: fit-content;
+  z-index: 1000;
+  overflow-x: visible;
+  overflow-y: auto;
+  max-height: 80vh;
+  opacity: 0%;
+  transition: all 0.5s;
+}
+
+.sim-modal:hover {
+  opacity: 100%;
+  transition: all 0.5s;
+}
+
+.margin-5 {
+  margin: 10px;
 }
 
 @media screen and (max-width: 1330px) {
