--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -414,6 +414,13 @@ button:hover {
   /* display: flex; */
 }
 
+.outScrollableSim2 {
+  position: relative; /* Make the container a positioning context */
+  height: 60vh; /* Ensure the image container takes the full height of the scrollable div */
+  /* display: flex; */
+  width: 70vw;
+}
+
 .inScrollable {
   position: relative; /* Make the container a positioning context */
   width: 100%; /* Ensure the image container takes the full width of the scrollable div */
@@ -709,6 +716,17 @@ button:hover {
   }
 }
 
+@keyframes pulse3 {
+  0% {
+    filter: brightness(1.5);
+  }
+  50% {
+    filter: brightness(0.8);
+  }
+  100% {
+    filter: brightness(1.5);
+  }
+}
 
 
 .add-comp-button {
@@ -2157,11 +2175,13 @@ button:hover {
 
 .builder-card-hand {
   width: 115px;
+  height: 160px;
   margin-right: -30px;
   border-radius: 5px;
   overflow: hidden;
   border: 1px solid white;
   z-index: 0;
+  position: relative;
 }
 
 .builder-card-hand:hover {
@@ -2170,18 +2190,18 @@ button:hover {
 
 .builder-card-hand2 {
   width: 115px;
-  margin: 10px;
+  height: 160px;
+  margin-right: -30px;
+  margin-top: -100px;
   border-radius: 5px;
   overflow: hidden;
   border: 1px solid white;
   z-index: 0;
 }
 
-
 .selected3 {
-  outline: 5px solid rgb(255, 0, 0);
-  border: none;
   z-index: 20;
+  animation: pulse3 1.5s infinite;
 }
 
 .card-pool-fill-hand {
@@ -2295,6 +2315,41 @@ button:hover {
 
 .margin-5 {
   margin: 10px;
+}
+
+.card-menu {
+  width: 115px;
+  position: relative;
+  margin-bottom: 10px;
+  margin-top: -160px;
+  margin-right: -30px;
+}
+
+.deck-menu {
+  width: 140px;
+  position: relative;
+  margin-bottom: 10px;
+  margin-top: -110px;
+}
+
+.card-menu-item {
+  width: 100%;
+  height: 25px;
+  background-color: rgba(107, 107, 107, 0.75);
+  outline: 1px solid white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.card-menu-item p {
+  font-size: 14px;
+  margin: 0;
+}
+
+.card-menu-item:hover {
+  background-color: rgba(180, 180, 180, 0.75);
 }
 
 @media screen and (max-width: 1330px) {
