--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -728,8 +728,26 @@ button:hover {
   }
 }
 
+@keyframes pulse4 {
+  0% {
+    filter: brightness(1.5);
+    background-color: rgba(255, 255, 255, 0.171);
+  }
+  50% {
+    filter: brightness(0.5);
+    background-color: rgba(255, 255, 255, 0);
+  }
+  100% {
+    filter: brightness(1.5);
+    background-color: rgba(255, 255, 255, 0.171);
+  }
+}
+
 @keyframes slide {
   0% {
+    transform: translate(-1500px, 0);
+  }
+  10% {
     transform: translate(-1500px, 0);
   }
   25% {
@@ -2165,6 +2183,26 @@ button:hover {
   border-radius: 17px;
   border: 1px solid white;
   background-color: rgba(0, 0, 0, 0.39);
+  transition: all 0.5s;
+}
+
+.no_settings_container {
+  position: fixed;
+  width: 100px;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0px;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  height: fit-content;
+  border-radius: 17px;
+  border: 1px solid white;
+  background-color: rgba(0, 0, 0, 0.39);
+  transition: all 0.5s;
 }
 
 .size_button {
@@ -2501,7 +2539,7 @@ button:hover {
 }
 
 .notify {
-  animation: pulse3 1.5s infinite ;
+  animation: pulse4 1.5s infinite ;
 }
 
 .fontSize60 {
@@ -2534,6 +2572,13 @@ button:hover {
   background-color: rgba(0, 0, 0, 0);
   z-index: -9;
   transition: all 0.5s;
+}
+
+.lock {
+  position: relative;
+  top: 0;
+  font-weight: 500;
+  margin-bottom: 5px;
 }
 
 @media screen and (max-width: 1330px) {
